--- a/index.html
+++ b/index.html
@@ -1,40 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap Example</title>
+  <title>Ти избираш - Детски летен лагер Блага Вест 2019</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+  <style>
+    .bg-purple {
+      background-color: #6f42c1;
+    }
 
-<div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
-</div>
-  
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    .bg-green {
+      background-color: #459418;
+    }
+
+    .bg-team1 {
+      background-color: #db6e15;
+    }
+
+    .bg-team2 {
+      background-color: #088018;
+    }
+
+    .bg-team3 {
+      background-color: #db1568;
+    }
+
+    .bg-team4 {
+      background-color: #3724e0;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron text-center d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded shadow-sm">
+      <div class="lh-100">
+        <h1 class="mb-0 text-white lh-100">Ти избираш</h1>
+        <p>Детски летен лагер Блага Вест 2019</p>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+
+    <div class="jumbotron text-center d-flex align-items-center p-3 my-3 text-white-50 bg-green rounded shadow-sm">
+      <div class="lh-100">
+        <h1 class="mb-0 text-white lh-100">Неделя</h1>
+        <p>Бог избра пръв (Йоан 15:16)</p>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+
+    <div class="container">
+      <div class="row">
+        <div class="text-center shadow-sm col-sm-3">
+          <div class="align-items-center p-3 rounded bg-team1">
+            <h3>Отбор 1</h3>
+          </div>
+          <p>Последна игра</p>
+          <p> на плажа: 5 точки</p>
+          <p> в лагера: 5 точки</p>
+          <hr />
+          <p class="btn btn-warning">Общо: 25 точки</p>
+        </div>
+        <div class="text-center shadow-sm col-sm-3">
+          <div class="align-items-center p-3 rounded bg-team2">
+            <h3>Отбор 2</h3>
+          </div>
+          <p>Последна игра</p>
+          <p> на плажа: 5 точки</p>
+          <p> в лагера: 5 точки</p>
+          <hr />
+          <p class="btn btn-warning">Общо: 25 точки</p>
+        </div>
+        <div class="text-center shadow-sm col-sm-3">
+          <div class="align-items-center p-3 rounded bg-team3">
+            <h3>Отбор 3</h3>
+          </div>
+          <p>Последна игра</p>
+          <p> на плажа: 5 точки</p>
+          <p> в лагера: 5 точки</p>
+          <hr />
+          <p class="btn btn-warning">Общо: 25 точки</p>
+        </div>
+        <div class="text-center shadow-sm col-sm-3">
+          <div class="align-items-center p-3 rounded bg-team4">
+            <h3>Отбор 4</h3>
+          </div>
+          <p>Последна игра</p>
+          <p> на плажа: 5 точки</p>
+          <p> в лагера: 5 точки</p>
+          <hr />
+          <p class="btn btn-warning">Общо: 25 точки</p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
 </body>
+
 </html>
