--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="jumbotron text-center d-flex align-items-center p-3 my-3 text-white-50 bg-green rounded shadow-sm">
       <div class="lh-100">
         <h1 class="mb-0 text-white lh-100">Неделя</h1>
-        <p>Бог избра пръв (Йоан 15:16)</p>
-      </div>
+        <h2>Бог избра пръв (Йоан 15:16)</h2>
+      </div>      
     </div>
 
     <div class="container">
@@ -95,6 +95,20 @@
           <p class="btn btn-warning">Общо: 25 точки</p>
         </div>
       </div>
+    </div>
+
+    <div class="jumbotron text-center d-flex align-items-center p-3 my-3 text-white-50 bg-green rounded shadow-sm">
+      <div class="lh-100">
+        <h1 class="mb-0 text-white lh-100">14:30 следобедна почивка</h1>
+        <h2>остават 3 мин и 20 сек.</h2>
+      </div>      
+    </div>
+    <div class="jumbotron text-left d-flex align-items-left p-3 my-3 text-white-50 bg-green rounded shadow-sm">
+      <div class="lh-100">
+        <h1 class="mb-0 text-white lh-100">16:00 урок по групи</h1>
+        <h2>17:00 театър</h2>
+        <h2>17:30 следобедна игра</h2>
+      </div>      
     </div>
   </div>
 </body>
