--- a/Thursday.html
+++ b/Thursday.html
@@ -62,8 +62,8 @@
       width: 100%;
     }
 
-    .sggggticky+.content {
-      padding-top: 178px;
+    .sticky+.content {
+      padding-top: 148px;
     }
 
     .timerset {}
