--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
   <style>
     .bg-purple {
       background-color: #6f42c1;
@@ -63,56 +64,190 @@
     }
 
     .sticky+.content {
-      padding-top: 102px;
+      padding-top: 148px;
     }
 
-    .widthForTime {
-      width: 175px;
-      margin-right: 10px;
-    }
-
-    .widthForTimer {
-      width: 275px;
-      margin-right: 10px;
-    }
-
-    .timerset {}
   </style>
 </head>
 
 <body>
 
   <script>
-    var today = '--';
-    var dayOfWeek = "преход";
-    var theme = "--";
     var teams = [
       { position: 1, color: "bg-team1", name: "Team 1", game1: "--", game2: "--", total: "0" },
       { position: 2, color: "bg-team2", name: "Team 2", game1: "--", game2: "--", total: "0" },
       { position: 3, color: "bg-team3", name: "Team 3", game1: "--", game2: "--", total: "0" },
       { position: 4, color: "bg-team4", name: "Team 4", game1: "--", game2: "--", total: "0" }
     ];
-    var timers = [
-      { id: "pos1", hour: 7, min: 30, label: "Ставане" },
-      { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
-      { id: "pos3", hour: 8, min: "00", label: "Закуска" },
-      { id: "pos4", hour: 8, min: 30, label: "Молитва" },
-      { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-      { id: "pos6", hour: 9, min: "00", label: "Плаж" },
-      { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
-      { id: "pos8", hour: 13, min: "00", label: "Обяд" },
-      { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
-      { id: "pos10", hour: 15, min: 30, label: "Ставане" },
-      { id: "pos11", hour: 16, min: "00", label: "Урок" },
-      { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-      { id: "pos13", hour: 17, min: 30, label: "Игри" },
-      { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
-      { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
-      { id: "pos16", hour: 19, min: 45, label: "Служба" },
-      { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
-      { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
-      { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
-    ];
+    var week = {
+      Saturday: {
+          dayOfWeek: "Събота",
+          theme: "Пристигане и разпределяне на отборите",
+          timers: [
+            { id: "pos8", hour: 14, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: 30, label: "Настаняване" },
+            { id: "pos10", hour: 16, min: "00", label: "Плаж" },
+            { id: "pos12", hour: 17, min: "00", label: "Прибиране от плажа" },
+            { id: "pos13", hour: 17, min: 30, label: "Формиране на отбори" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        },
+        Sunday: {
+          dayOfWeek: "Неделя",
+          theme: "Бог избра пръв (Йоан 15:16)",
+          timers: [
+            { id: "pos1", hour: 7, min: 30, label: "Ставане" },
+            { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
+            { id: "pos3", hour: 8, min: "00", label: "Закуска" },
+            { id: "pos4", hour: 8, min: 30, label: "Молитва" },
+            { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
+            { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+            { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+            { id: "pos8", hour: 13, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
+            { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+            { id: "pos11", hour: 16, min: "00", label: "Урок" },
+            { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
+            { id: "pos13", hour: 17, min: 30, label: "Игри" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        },
+        Monday: {
+          dayOfWeek: "Понеделник",
+          theme: "Избор да служим на Бога - Мария и Йосиф",
+          timers: [
+            { id: "pos1", hour: 7, min: 30, label: "Ставане" },
+            { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
+            { id: "pos3", hour: 8, min: "00", label: "Закуска" },
+            { id: "pos4", hour: 8, min: 30, label: "Молитва" },
+            { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
+            { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+            { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+            { id: "pos8", hour: 13, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
+            { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+            { id: "pos11", hour: 16, min: "00", label: "Урок" },
+            { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
+            { id: "pos13", hour: 17, min: 30, label: "Игри" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        },
+        Tuesday: {
+          dayOfWeek: "Вторник",
+          theme: "Избор между Бога и богаството - богатия младеж",
+          timers: [
+            { id: "pos1", hour: 7, min: 30, label: "Ставане" },
+            { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
+            { id: "pos3", hour: 8, min: "00", label: "Закуска" },
+            { id: "pos4", hour: 8, min: 30, label: "Молитва" },
+            { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
+            { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+            { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+            { id: "pos8", hour: 13, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
+            { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+            { id: "pos11", hour: 16, min: "00", label: "Урок" },
+            { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
+            { id: "pos13", hour: 17, min: 30, label: "Игри" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        },
+        Wednesday: {
+          dayOfWeek: "Сряда",
+          theme: "Избора на приятели",
+          timers: [
+            { id: "pos1", hour: 7, min: 30, label: "Ставане" },
+            { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
+            { id: "pos3", hour: 8, min: "00", label: "Закуска" },
+            { id: "pos4", hour: 8, min: 30, label: "Молитва" },
+            { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
+            { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+            { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+            { id: "pos8", hour: 13, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
+            { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+            { id: "pos11", hour: 16, min: "00", label: "Урок" },
+            { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
+            { id: "pos13", hour: 17, min: 30, label: "Игри" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        },
+        Thursday: {
+          dayOfWeek: "Четвътък",
+          theme: "Избор да слушаме Бога, а не хората - Данаил",
+          timers: [
+            { id: "pos1", hour: 7, min: 30, label: "Ставане" },
+            { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
+            { id: "pos3", hour: 8, min: "00", label: "Закуска" },
+            { id: "pos4", hour: 8, min: 30, label: "Молитва" },
+            { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
+            { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+            { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+            { id: "pos8", hour: 13, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
+            { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+            { id: "pos11", hour: 16, min: "00", label: "Урок" },
+            { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
+            { id: "pos13", hour: 17, min: 30, label: "Игри" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        },
+        Friday: {
+          dayOfWeek: "Петък",
+          theme: "Избор между живота и смъртта - Адам и Ева",
+          timers: [
+            { id: "pos1", hour: 7, min: 30, label: "Ставане" },
+            { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
+            { id: "pos3", hour: 8, min: "00", label: "Закуска" },
+            { id: "pos4", hour: 8, min: 30, label: "Молитва" },
+            { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
+            { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+            { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+            { id: "pos8", hour: 13, min: "00", label: "Обяд" },
+            { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
+            { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+            { id: "pos11", hour: 16, min: "00", label: "Урок" },
+            { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
+            { id: "pos13", hour: 17, min: 30, label: "Игри" },
+            { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
+            { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
+            { id: "pos16", hour: 19, min: 45, label: "Служба" },
+            { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+            { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
+            { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          ]
+        }
+    };
     var dayNames = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
   </script>
 
@@ -125,7 +260,7 @@
 
   <div class="header" id="myHeader" style="z-index: 100">
     <div class="jumbotron text-center p-3 my-3 text-white-50 bg-green rounded shadow-sm">
-      <div class="lh-100">
+      <div class="lh-100" id="clickme">
         <h2 class="mb-0 text-white lh-100" id="dayOfWeekLabel">--</h2>
         <h3 class="mb-0 text-white lh-100" id="themeLabel">--</h3>
       </div>
@@ -133,16 +268,7 @@
     <div class="row team-items">
 
     </div>
-    <div class="row p-3 my-3 text-right">
-      <div class="btn btn-info" id="clickme">Hide</div>
-    </div>
   </div>
-  <script>
-    $("#clickme").click(function () {
-      $("#myHeader").hide("slow", function () {
-      });
-    });
-  </script>
 
   <div class="container">
     <div class="list-items">
@@ -164,32 +290,42 @@
 
   <script type="text/template" data-template="teamitem">
     <div class="text-center shadow-sm col-sm-3" style="margin-top: ${position}0px">
-      <div class="align-items-center p-3 rounded ${color}">
+      <div class="align-items-center p-0 rounded ${color}">
         <h4>${name}</h4>
       </div>
-      <p></p>
-      <p> Плаж: ${game1} точки</p>
-      <p>Лагер: ${game2} точки</p>
-      <hr />
-      <p class="btn btn-warning">Общо: ${total} точки</p>
+      <div class="row">
+        <div class="col"><i class='fas fa-umbrella-beach'></i> ${game1} т.</div>
+        <div class="col"><i class='fas fa-campground'></i> ${game2} т.</div>
+      </div>
+      <p class="center">Общо: ${total} точки</p>
     </div>
   </script>
 
   <script>
-
+    var now = new Date();
+    var dayofweek = dayNames[now.getDay()];
 
     window.onscroll = function () { myFunction() };
-
+    var iScroll = false;
+    var autoScroll = false;
     var header = document.getElementById("myHeader");
     var sticky = header.offsetTop;
 
     function myFunction() {
       if (window.pageYOffset > sticky) {
-        header.classList.add("sticky");
+          header.classList.add("sticky");
       } else {
-        header.classList.remove("sticky");
+          header.classList.remove("sticky");
       }
+      if (!autoScroll) {
+        iScroll = true;
+        var done = setTimeout(function () {
+          iScroll = false;
+        }, 3000);
+      }
+      autoScroll = false;
     }
+
     function render(props) {
       return function (tok, i) { return (i % 2) ? props[tok] : tok; };
     }
@@ -202,22 +338,23 @@
     var teamTpl = $('script[data-template="teamitem"]').text().split(/\$\{(.+?)\}/g);
     var itemTpl = $('script[data-template="listitem"]').text().split(/\$\{(.+?)\}/g);
 
-    $("#dayOfWeekLabel").text(dayOfWeek);
-    $("#themeLabel").text(theme);
+    $("#dayOfWeekLabel").text(week[dayofweek].dayOfWeek);
+    $("#themeLabel").text(week[dayofweek].theme);
 
-    $('.list-items').append(timers.map(function (item) {
+    $('.list-items').append(week[dayofweek].timers.map(function (item) {
       return itemTpl.map(render(item)).join('');
     }));
     $('.team-items').append(teams.map(function (item) {
       return teamTpl.map(render(item)).join('');
     }));
 
-    var x = setInterval(function () {
-      var now = new Date();
+    var x = setInterval(function () { 
+      now = new Date();     
       var first = true;
-      timers.forEach(element => {
+      var last = "pos1";
+      week[dayofweek].timers.forEach(element => {
         var countDownDate = new Date(now.getFullYear(), now.getMonth(), now.getDate(), element.hour, element.min, 0, 0);
-        var distance = countDownDate.getTime() - now.getTime() + (1000 * 60 * 60 * 2) - (31 * 60 * 1000);
+        var distance = countDownDate.getTime() - now.getTime();
         if (distance < 0) {
           $("#" + element.id).addClass("bg-secondary");
           $("#" + element.id).removeClass("bg-success");
@@ -230,20 +367,24 @@
           var seconds = Math.floor((distance % (1000 * 60)) / 1000);
           if (first) {
             first = false;
-            $("#" + element.id).addClass("bg-success");
-            $("#" + element.id).removeClass("bg-info");
-            $("#" + element.id).removeClass("bg-secondary");
-            $("#" + element.id + " > div > div > div:nth-child(3)").text(zeroPad(hours, 2) + ":" + zeroPad(minutes, 2) + ":" + zeroPad(seconds, 2));
-            $("#" + element.id).get(0).scrollIntoView();
+            $("#" + last).addClass("bg-success");
+            $("#" + last).removeClass("bg-info");
+            $("#" + last).removeClass("bg-secondary");
+            $("#" + last + " > div > div > div:nth-child(3)").text(zeroPad(hours, 2) + ":" + zeroPad(minutes, 2) + ":" + zeroPad(seconds, 2));
+            if (!iScroll) {
+              autoScroll = true;
+              $("#" + last).get(0).scrollIntoView();
+            }
           }
         }
-
-        var dayofweek = dayNames[now.getDay()];
-        if (dayofweek !== today) {
-          window.location.replace(dayofweek + ".html");
-        }
+        last = element.id;
       });
     }, 1000);
+
+    $("#clickme").click(function () {
+      $("#myHeader").hide("slow", function () {
+      });
+    });
   </script>
 </body>
 
