--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     body {
       margin: 0;
+      font-size: 25em;
     }
 
     .top-container {
@@ -99,21 +100,21 @@
       },
       Sunday: {
         dayOfWeek: "Неделя",
-        theme: "Бог избра пръв (Йоан 15:16)",
+        theme: "Бог избра пръв <br/> защото под небето няма друго име, на човеци дадено, чрез което трябва да се спасим <br/> Деяния 4:12",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - верига с топка" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
-          { id: "pos10", hour: 15, min: 30, label: "Ставане" },
+          { id: "pos10", hour: 15, min: 45, label: "Ставане" },
           { id: "pos11", hour: 16, min: "00", label: "Урок" },
           { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри" },
+          { id: "pos13", hour: 17, min: 30, label: "Игри - Corndhole" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
