--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
     body {
       margin: 0;
-      font-size: 25em;
+    }
+
+    btn {
+      font-size: 25px;
     }
 
     .top-container {
