--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 
     body {
       margin: 0;
-    }
-
-    btn {
-      font-size: 25px;
+      font-size: 35px;
     }
 
     .top-container {
@@ -103,7 +100,7 @@
       },
       Sunday: {
         dayOfWeek: "Неделя",
-        theme: "Бог избра пръв <br/> защото под небето няма друго име, на човеци дадено, чрез което трябва да се спасим <br/> Деяния 4:12",
+        theme: "Бог избра пръв - защото под небето няма друго име, на човеци дадено, чрез което трябва да се спасим ( Деяния 4:12 )",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
