--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
-          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри - спортни игри и сценка" },
           { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
           { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
         ]
