--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
           { id: "pos17", hour: 20, min: 30, label: "Вечерни игри - спортни игри и сценка" },
-          { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
-          { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          { id: "pos18", hour: 22, min: "00", label: "Прибиране на малките" },
+          { id: "pos18", hour: 23, min: "00", label: "Прибиране на големите" },
+          { id: "pos19", hour: 23, min: 30, label: "Гасене на лампите" }
         ]
       },
       Monday: {
