--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     }
 
     .bg-team1 {
-      background-color: #db6e15;
+      background-color: #db15a0;
     }
 
     .bg-team2 {
-      background-color: #088018;
+      background-color: #e9ec0e;
     }
 
     .bg-team3 {
-      background-color: #db1568;
+      background-color: #e98d14;
     }
 
     .bg-team4 {
@@ -75,10 +75,10 @@
 
   <script>
     var teams = [
-      { position: 1, color: "bg-team1", name: "Team 1", game1: "--", game2: "--", total: "0" },
-      { position: 1, color: "bg-team2", name: "Team 2", game1: "--", game2: "--", total: "0" },
-      { position: 1, color: "bg-team3", name: "Team 3", game1: "--", game2: "--", total: "0" },
-      { position: 1, color: "bg-team4", name: "Team 4", game1: "--", game2: "--", total: "0" }
+      { position: 1, color: "bg-team1", name: "Розовите кравички", game1: "12", game2: "--", total: "12" },
+      { position: 2, color: "bg-team2", name: "Морските звезди", game1: "9", game2: "--", total: "9" },
+      { position: 3, color: "bg-team3", name: "Немо", game1: "6", game2: "--", total: "6" },
+      { position: 4, color: "bg-team4", name: "Сините пламъчета", game1: "3", game2: "--", total: "3" }
     ];
     var week = {
       Saturday: {
