--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     }
 
     .bg-team2 {
-      background-color: #e9ec0e;
+      background-color: #ec0e51;
     }
 
     .bg-team3 {
       background-color: #e98d14;
+      color: black;
     }
 
     .bg-team4 {
-      background-color: #3724e0;
+      background-color: #e0d324;
       color: white;
     }
 
@@ -75,10 +76,10 @@
 
   <script>
     var teams = [
-      { position: 1, color: "bg-team1", name: "Розовите кравички", game1: "12", game2: "--", total: "12" },
-      { position: 2, color: "bg-team2", name: "Морските звезди", game1: "9", game2: "--", total: "9" },
-      { position: 3, color: "bg-team3", name: "Немо", game1: "6", game2: "--", total: "6" },
-      { position: 4, color: "bg-team4", name: "Сините пламъчета", game1: "3", game2: "--", total: "3" }
+      { position: 1, color: "bg-team1", name: "Розовите кравички", game1: "12", game2: "9", total: "21" },
+      { position: 2, color: "bg-team2", name: "Морските звезди", game1: "9", game2: "10", total: "19" },
+      { position: 4, color: "bg-team3", name: "Немо", game1: "6", game2: "12", total: "18" },
+      { position: 2, color: "bg-team4", name: "Сините пламъчета", game1: "3", game2: "16", total: "19" }
     ];
     var week = {
       Saturday: {
