--- a/index.html
+++ b/index.html
@@ -127,96 +127,92 @@
       },
       Monday: {
         dayOfWeek: "Понеделник",
-        theme: "Избор да служим на Бога - Мария и Йосиф",
+        theme: "Избор да служим на Бога - Но първом търсете царството на Бога и Неговата правда, и всичко това ще ви се придаде. (Матей 6:33)",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва " },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - макаронена топка" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
           { id: "pos10", hour: 15, min: 30, label: "Ставане" },
           { id: "pos11", hour: 16, min: "00", label: "Урок" },
           { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри" },
+          { id: "pos13", hour: 17, min: 30, label: "Игри - 4 нива на мъка" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
-          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
-          { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
-          { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
+          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри -барбекю" },
+          { id: "pos18", hour: 22, min: "00", label: "Прибиране на малките" },
+          { id: "pos18", hour: 23, min: "00", label: "Прибиране на големите" },
+          { id: "pos19", hour: 23, min: 30, label: "Гасене на лампите" }
         ]
       },
       Tuesday: {
         dayOfWeek: "Вторник",
-        theme: "Избор между Бога и богаството - богатия младеж",
+        theme: "Избор между Бога и богаството - При това знаем, че на ония, които любят Бога и са призвани по Негова воля, всичко съдействува към добро (Римляни 8:28)",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
-          { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж" },
-          { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+          { id: "pos6", hour: 9, min: "00", label: "Игра" },
+          { id: "pos7", hour: 10, min: "00", label: "Свободно време" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
-          { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
-          { id: "pos10", hour: 15, min: 30, label: "Ставане" },
-          { id: "pos11", hour: 16, min: "00", label: "Урок" },
-          { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри" },
+          { id: "pos9", hour: 14, min: "00", label: "Парк" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
-          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри - кукли" },
           { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
           { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
         ]
       },
       Wednesday: {
         dayOfWeek: "Сряда",
-        theme: "Избора на приятели",
+        theme: "Избора на приятели - Слушай, синко, и бъди мъдър и насочвай сърцето си по правия път. (Притчи23:19)",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - пренасяне" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
           { id: "pos10", hour: 15, min: 30, label: "Ставане" },
           { id: "pos11", hour: 16, min: "00", label: "Урок" },
           { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри" },
+          { id: "pos13", hour: 17, min: 30, label: "Игри - минно поле" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
-          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри - вечер на момчета и момичета" },
           { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
           { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
         ]
       },
       Thursday: {
         dayOfWeek: "Четвътък",
-        theme: "Избор да слушаме Бога, а не хората - Данаил",
+        theme: "Избор да слушаме Бога, а не хората - И тъй, братя мои възлюбени, бъдете твърди, непоколебими и напредвайте винаги в делото Господне, като знаете, че трудът ви не е напразен пред Господа. (1 Кор 15:58)",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - водни балони" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
           { id: "pos10", hour: 15, min: 30, label: "Ставане" },
           { id: "pos11", hour: 16, min: "00", label: "Урок" },
           { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри" },
+          { id: "pos13", hour: 17, min: 30, label: "Игри - кралят" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
@@ -227,21 +223,20 @@
       },
       Friday: {
         dayOfWeek: "Петък",
-        theme: "Избор между живота и смъртта - Адам и Ева",
+        theme: "Избор между живота и смъртта - Във всичките си пътища познавай Него, и Той ще оправи твоите пътеки. (Притчи 3:6)",
         timers: [
           { id: "pos1", hour: 7, min: 30, label: "Ставане" },
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - пясъчни фигури" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
           { id: "pos10", hour: 15, min: 30, label: "Ставане" },
           { id: "pos11", hour: 16, min: "00", label: "Урок" },
-          { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри" },
+          { id: "pos12", hour: 17, min: "00", label: "Подготовка за вечертана талантите" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
