--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
   <script>
     var teams = [
-      { position: 1, color: "bg-team1", name: "Розовите кравички", game1: "12", game2: "9", total: "21" },
-      { position: 2, color: "bg-team2", name: "Морските звезди", game1: "9", game2: "10", total: "19" },
-      { position: 4, color: "bg-team3", name: "Немо", game1: "6", game2: "12", total: "18" },
-      { position: 2, color: "bg-team4", name: "Сините пламъчета", game1: "3", game2: "16", total: "19" }
+      { position: 2, color: "bg-team1", name: "Розовите кравички", color:"P", game1: "6", game2: "--", total: "27" },
+      { position: 1, color: "bg-team2", name: "Морските звезди",   color:"R", game1: "12", game2: "--", total: "31" },
+      { position: 2, color: "bg-team3", name: "Немо",              color:"O", game1: "9", game2: "--", total: "27" },
+      { position: 4, color: "bg-team4", name: "Сините пламъчета",  color:"Y", game1: "3", game2: "--", total: "22" }
     ];
     var week = {
       Saturday: {
