--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
   <script>
     var teams = [
-      { position: 2, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "6", game2: "--", total: "27" },
-      { position: 1, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "12", game2: "--", total: "31" },
-      { position: 2, color: "bg-team3", name: "Немо",              acolor:"O", game1: "9", game2: "--", total: "27" },
-      { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "3", game2: "--", total: "22" }
+      { position: 2, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "6", game2: "40", total: "67" },
+      { position: 1, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "12", game2: "38", total: "69" },
+      { position: 3, color: "bg-team3", name: "Немо",              acolor:"O", game1: "9", game2: "39", total: "66" },
+      { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "3", game2: "39", total: "61" }
     ];
     var week = {
       Saturday: {
