--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     var teams = [
       { position: 2, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "6", game2: "40", total: "67" },
       { position: 1, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "12", game2: "38", total: "69" },
-      { position: 3, color: "bg-team3", name: "Немо",              acolor:"O", game1: "9", game2: "39", total: "66" },
+      { position: 2, color: "bg-team3", name: "Немо",              acolor:"O", game1: "9", game2: "40", total: "67" },
       { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "3", game2: "39", total: "61" }
     ];
     var week = {
@@ -159,8 +159,10 @@
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
-          { id: "pos6", hour: 9, min: "00", label: "Игра" },
-          { id: "pos7", hour: 10, min: "00", label: "Свободно време" },
+          { id: "pos6", hour: 9, min: "00", label: "Урок" },
+          { id: "pos7", hour: 10, min: "00", label: "Сценка" },
+          { id: "pos7", hour: 11, min: "00", label: "Игра" },
+          { id: "pos7", hour: 12, min: "00", label: "Свободно време" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Парк" },
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
