--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
   <script>
     var teams = [
-      { position: 2, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "6", game2: "40", total: "67" },
-      { position: 1, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "12", game2: "38", total: "69" },
-      { position: 2, color: "bg-team3", name: "Немо",              acolor:"O", game1: "9", game2: "40", total: "67" },
-      { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "3", game2: "39", total: "61" }
+      { position: 3, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "--", game2: "11", total: "78" },
+      { position: 1, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "--", game2: "20", total: "89" },
+      { position: 2, color: "bg-team3", name: "Немо",              acolor:"O", game1: "--", game2: "12", total: "79" },
+      { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "--", game2: "14", total: "75" }
     ];
     var week = {
       Saturday: {
@@ -182,7 +182,7 @@
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж - пренасяне" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - балонни" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
@@ -207,7 +207,7 @@
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
           { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж - водни балони" },
+          { id: "pos6", hour: 9, min: "00", label: "Плаж - пренасяне" },
           { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
           { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
