--- a/index.html
+++ b/index.html
@@ -206,19 +206,20 @@
           { id: "pos2", hour: 7, min: 45, label: "Гимнастика" },
           { id: "pos3", hour: 8, min: "00", label: "Закуска" },
           { id: "pos4", hour: 8, min: 30, label: "Молитва" },
-          { id: "pos5", hour: 8, min: 45, label: "Подготовка за плаж" },
-          { id: "pos6", hour: 9, min: "00", label: "Плаж - пренасяне" },
-          { id: "pos7", hour: 12, min: "00", label: "Прибиране" },
+          { id: "pos11", hour: 9, min: "00", label: "Урок" },
+          { id: "pos12", hour: 10, min: "00", label: "Пиеса" },
+          { id: "pos13", hour: 11, min: "00", label: "Игри - кралят" },
+          { id: "pos9", hour: 12, min: "00", label: "свободно време" },        
+          
           { id: "pos8", hour: 13, min: "00", label: "Обяд" },
-          { id: "pos9", hour: 14, min: "00", label: "Обедна почивка" },
-          { id: "pos10", hour: 15, min: 30, label: "Ставане" },
-          { id: "pos11", hour: 16, min: "00", label: "Урок" },
-          { id: "pos12", hour: 17, min: "00", label: "Пиеса" },
-          { id: "pos13", hour: 17, min: 30, label: "Игри - кралят" },
+          { id: "pos5", hour: 14, min: 45, label: "Подготовка за плаж" },
+          { id: "pos6", hour: 15, min: "00", label: "Плаж - пренасяне" },
+          { id: "pos7", hour: 18, min: "00", label: "Прибиране" },
+          
           { id: "pos14", hour: 18, min: 45, label: "Подготовка за вечерята" },
           { id: "pos15", hour: 19, min: "00", label: "Вечеря" },
           { id: "pos16", hour: 19, min: 45, label: "Служба" },
-          { id: "pos17", hour: 20, min: 30, label: "Вечерни игри" },
+          { id: "pos17", hour: 20, min: 30, label: "разходка в града" },
           { id: "pos18", hour: 22, min: 15, label: "Прибиране на малките" },
           { id: "pos19", hour: 23, min: "00", label: "Гасене на лампите" }
         ]
