--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
   <script>
     var teams = [
-      { position: 1, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "--", game2: "11", total: "122" },
-      { position: 2, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "--", game2: "6", total: "116" },
-      { position: 3, color: "bg-team3", name: "Немо",              acolor:"O", game1: "--", game2: "3", total: "107" },
-      { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "--", game2: "9", total: "99" }
+      { position: 1, color: "bg-team1", name: "Розовите кравички", acolor:"P", game1: "3", game2: "--", total: "125" },
+      { position: 1, color: "bg-team2", name: "Морските звезди",   acolor:"R", game1: "9", game2: "--", total: "125" },
+      { position: 3, color: "bg-team3", name: "Немо",              acolor:"O", game1: "6", game2: "--", total: "113" },
+      { position: 4, color: "bg-team4", name: "Сините пламъчета",  acolor:"Y", game1: "12", game2: "--", total: "111" }
     ];
     var week = {
       Saturday: {
